k8s/istio-gateway/services-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: services-vs
spec:
  hosts:
  - "*"
  gateways:
  - services-gateway
  http:
  - route:
    - destination:
        host: services-app-service
        port:
          number: 5000
